<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Type in the name of a city:"
        android:textAlignment="inherit"
        android:textSize="28sp"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/cityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0E0E0E"
        android:ems="10"
        android:hint="Type city name here"
        android:inputType="text"
        android:textColor="#E64A19"
        android:textColorHighlight="@android:color/holo_orange_dark"
        android:textColorHint="#A3ABAC"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="64dp" />

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Forecast"
        android:textSize="28sp"
        app:cornerRadius="10dp"
        app:shapeAppearance="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="129dp" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Temperature goes here"
        android:textSize="24sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Max temp goes here"
        android:textSize="24sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Min temp goes here"
        android:textSize="24sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Humidity goes here"
        android:textSize="24sp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        app:srcCompat="@drawable/home" />
        <!-- android:visibility="invisible" /> -->

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description goes here"
        android:textSize="24sp"
        android:visibility="invisible" />

</LinearLayout>